Wallet issue fix